Fix color contrast issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ background-size: cover;
 
 .about-btn {
   padding: 10px;
-  background-color: #6BA244; 
+  background-color: #013220; 
   text-decoration: none;
   color: #fff;
   margin-top: 30px;
@@ -249,7 +249,8 @@ background-size: cover;
 
 .about-skills p:first-child {
   font-weight: bold;
-  color: #6BA244;
+  color: #013220; 
+
 }
 
 #contact-form {
